2009-06-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.57

	Really fix NB#122719 now.

	* src/home/hd-render-manager.[ch]
	(hd_render_manager_get_status_area_client): New function to access the
	status area client.
	* src/home/hd-title-bar.c (status_area_is_visible): Check coordinates
	of the SA client, not the Clutter client because it might not be
	updated yet.

2009-06-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#124133 No potrait mode when there is an incoming event preview
		  in switcher view.

	Naturally, if the poor, otherwise useless client is standing on the
	top of the window stack.

	* src/mb/hd-note.c:
	  Override MBWMClientDialog::stacking_layer() for incoming event
	  notifs.

2009-06-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-render-manager.c
	(hd_render_manager_sync_clutter_before): Don't call hd_title_bar_update
	after hd_render_manager_place_titlebar_elements has already done it.

	Release 2.2.56

2009-06-22  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#122710 Weird screen appearing after closing the camera application
	
	* src/home/hd-home.c: We should set WM_CLIENT_MACHINE and _NET_WM_PID
	on the desktop window.

2009-06-22  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#121966 Banners displayed even when Do not Disturb flag is enabled.

	* src/mb/hd-comp-mgr.c: Banner notes are only discarded during DND
	if either they don't have a parent window or their parent window
	is not uppermost.  (The previous code checked whether the banner
	itself was uppermost.)

2009-06-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	  Make scroll indicators MLG 2.3 compilant.

	* src/tidy/tidy-scroll-view.c:
	  Set default indicator width/height 8 pixels.
	  Set a 8 pixel right-padding by default.

2009-06-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	  Clean up the mess.

	* src/mb/hd-note.c (hd_note_init):
	  Rather than stacking low move HdNoteIncomingEvent:s off the screen.
