@@ -1,6 +1,7 @@
 hildon-desktop (1:2.2.58-1~unreleased) unstable; urgency=low
 
-  * foo
+  Laszlo:
+  * Fixes: NB#109932 - Panning over widgets
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 23 Jun 2009 14:03:05 +0300
 
